--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,13 @@ body{
   background-color: #000000;
   font-family: 'Lato','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+.youtube{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100vh;
+}
+
