--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 body{
-  background-color: #000000;
+  background-color: #f8f7f7;
   font-family: 'Lato','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .youtube{
@@ -14,10 +14,35 @@ body{
   width: 100%;
   height: 100vh;
 }
-/* body::-webkit-scrollbar{
+body::-webkit-scrollbar{
 
-} */
+}
 .animater::-webkit-scrollbar{
 display:none;
 }
- 
+ div{
+  color: black;
+ }
+ /* sm:hidden z-10  pr-4 */
+ .slide-out{
+  transition: all 5s ease-in-out;
+  position: absolute;
+  left: -100%;
+  /* bottom: 0; */
+  z-index: 10;
+  background-color: antiquewhite;
+ }
+  
+ .slide-in{
+  transition: all 2s ease-in-out;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: 10;
+  padding-right: 16px;
+ }
+ @media screen and (min-width:640px){
+  .slide-in{
+    display: none;
+  }
+ }
